feat:added links

--- a/components/installation/installation.html
+++ b/components/installation/installation.html
@@ -56,6 +56,10 @@
                             <a href="../typography/typography.html">Text utilities</a>
                             <a href="../lists/lists.html">Lists</a>
                             <a href="../navigation/navigation.html">Navigation</a>
+                            <a href="../grids/grids.html">Grids</a>
+                            <a href="../ratings/ratings.html">Ratings</a>
+                            <a href="../snackbar/snackbar.html">Snackbar</a>
+
                         </nav>
 
                     </aside>
