--- a/components/snackbar/snackbar.html
+++ b/components/snackbar/snackbar.html
@@ -46,16 +46,19 @@
                             <hr />
                         </nav>
                         <nav class="drawer-navigation">
-                            <a href="avatar.html">Avatar</a>
+                            <a href="../avatar/avatar.html">Avatar</a>
                             <a href="../alerts/alerts.html">Alert</a>
                             <a href="../badges/badges.html">Badge</a>
                             <a href="../buttons/button.html">Buttons</a>
                             <a href="../cards/cards.html">Card</a>
                             <a href="../images/images.html">Image</a>
                             <a href="../input/input.html">Input</a>
-                            <a class="active" href="../typography/typography.html">Text utilities</a>
+                            <a  href="../typography/typography.html">Text utilities</a>
                             <a href="../lists/lists.html">Lists</a>
                             <a href="../navigation/navigation.html">Navigation</a>
+                            <a   href="../grids/grids.html">Grids</a>
+                            <a   href="../ratings/ratings.html">Ratings</a>
+                            <a class="active"  href="../snackbar/snackbar.html">Snackbar</a>
                         </nav>
 
                     </aside>
