--- a/components/cards/cards.html
+++ b/components/cards/cards.html
@@ -45,7 +45,7 @@
                             <hr />
                         </nav>
                         <nav class="drawer-navigation">
-                            <a  href="avatar.html">Avatar</a>
+                            <a  href="../avatar/avatar.html">Avatar</a>
                             <a href="../alerts/alerts.html">Alert</a>
                             <a href="../badges/badges.html">Badge</a>
                             <a href="../buttons/button.html">Buttons</a>
@@ -55,6 +55,9 @@
                             <a href="../typography/typography.html">Text utilities</a>
                             <a href="../lists/lists.html">Lists</a>
                             <a href="../navigation/navigation.html">Navigation</a>
+                            <a href="../grids/grids.html">Grids</a>
+                            <a href="../ratings/ratings.html">Ratings</a>
+                            <a href="../snackbar/snackbar.html">Snackbar</a>
                         </nav>
 
                     </aside>
