--- a/components/grids/grids.html
+++ b/components/grids/grids.html
@@ -58,7 +58,9 @@
                             <a href="../typography/typography.html">Text utilities</a>
                             <a href="../lists/lists.html">Lists</a>
                             <a href="../navigation/navigation.html">Navigation</a>
-                            <a class="active" href="../grids/grids.html">Grids</a>
+                            <a  class="active"  href="../grids/grids.html">Grids</a>
+                            <a href="../ratings/ratings.html">Ratings</a>
+                            <a href="../snackbar/snackbar.html">Snackbar</a>
                         </nav>
 
                     </aside>
