--- a/docs/sidebar.css
+++ b/docs/sidebar.css
@@ -32,7 +32,7 @@ padding-left:4rem;
     color:var(--text-secondary);
 }
 .drawer-navigation a:hover{
-    padding-left:80px;
+/*     padding-left:80px; */
     transition: all .1s ease-in-out;
 }
 
