styles:added styles

--- a/docs/spacing.css
+++ b/docs/spacing.css
@@ -52,3 +52,13 @@
 }
 
 /* border-radius */
+/* flex */
+.flex-column-start{
+    display:flex;
+    justify-content:flex-start;
+
+}
+.flex-column-end{
+    display:flex;
+    justify-content:flex-end;
+}
