--- a/docs/base.css
+++ b/docs/base.css
@@ -19,6 +19,8 @@
     --online-background-color: rgb(3, 73, 18);
     --offline-background-color: rgb(138, 136, 136);
     --snackbar-color:#3c3c3c;
+    --modal-color:#c1dbdecb;
+    
 
 
     /* font-size */
