--- a/components/slider/slider.html
+++ b/components/slider/slider.html
@@ -73,7 +73,7 @@
                 <h2>  Simple Slider:</h2>
                 <div class="code-container">     
                     <div class="slider">      
-                        <input name="range1" type="range" step="1" min="1" max="10" >       
+                        <input name="sound" type="range" step="1" min="1" max="10" >       
                     </div>    
                 </div>
                 <div class="iframe-code">
@@ -84,7 +84,7 @@
                     <div>
                         <form  oninput="soundvalue.value= sound.valueAsNumber" ">
                             <input name="sound" type="range" step="1" min="1" max="100" value="1">
-                            <output name="soundvalue" for="range1">1</output>
+                            <output name="soundvalue">1</output>
                         </form>
                     </div>
 
