--- a/components/Modal/Modal.html
+++ b/components/Modal/Modal.html
@@ -60,7 +60,9 @@
                             <a href="../grids/grids.html">Grids</a>
                             <a href="../ratings/ratings.html">Ratings</a>
                             <a href="../snackbar/snackbar.html">Snackbar</a>
+                            <a href="../slider/slider.html">Slider</a>
                             <a class="active" href="../Modal/modal.css">Modal</a>
+                            
                         </nav>
                     </aside>
                 </div>
