--- a/components/grids/grids.html
+++ b/components/grids/grids.html
@@ -61,6 +61,8 @@
                             <a  class="active"  href="../grids/grids.html">Grids</a>
                             <a href="../ratings/ratings.html">Ratings</a>
                             <a href="../snackbar/snackbar.html">Snackbar</a>
+                            <a href="../slider/slider.html">Slider</a>
+                            <a href="../Modal/modal.css">Modal</a>
                         </nav>
 
                     </aside>
