--- a/components/alerts/alerts.html
+++ b/components/alerts/alerts.html
@@ -56,6 +56,8 @@
                             <a href="../grids/grids.html">Grids</a>
                             <a href="../ratings/ratings.html">Ratings</a>
                             <a href="../snackbar/snackbar.html">Snackbar</a>
+                            <a href="../slider/slider.html">Slider</a>
+                            <a href="../Modal/modal.css">Modal</a>
                         </nav>
                     </aside>
                 </div>
