--- a/components/cards/cards.html
+++ b/components/cards/cards.html
@@ -58,6 +58,8 @@
                             <a href="../grids/grids.html">Grids</a>
                             <a href="../ratings/ratings.html">Ratings</a>
                             <a href="../snackbar/snackbar.html">Snackbar</a>
+                            <a href="../slider/slider.html">Slider</a>
+                            <a href="../Modal/modal.css">Modal</a>
                         </nav>
 
                     </aside>
