--- a/components/buttons/button.html
+++ b/components/buttons/button.html
@@ -59,7 +59,7 @@
                             <a href="../ratings/ratings.html">Ratings</a>
                             <a href="../snackbar/snackbar.html">Snackbar</a>
                             <a href="../slider/slider.html">Slider</a>
-                            <a href="../Modal/modal.css">Modal</a>
+                            <a href="../Modal/modal.html">Modal</a>
                         </nav>
 
                     </aside>
