--- a/components/Modal/Modal.html
+++ b/components/Modal/Modal.html
@@ -61,7 +61,7 @@
                             <a href="../ratings/ratings.html">Ratings</a>
                             <a href="../snackbar/snackbar.html">Snackbar</a>
                             <a href="../slider/slider.html">Slider</a>
-                            <a class="active" href="../Modal/modal.css">Modal</a>
+                            <a class="active" href="../Modal/modal.html">Modal</a>
                             
                         </nav>
                     </aside>
