--- a/components/slider/slider.html
+++ b/components/slider/slider.html
@@ -58,7 +58,7 @@
                             <a href="../ratings/ratings.html">Ratings</a>
                             <a href="../snackbar/snackbar.html">Snackbar</a>
                             <a  class="active" href="../slider/slider.html">Slider</a>
-                            <a href="../Modal/modal.css">Modal</a>
+                            <a href="../Modal/modal.html">Modal</a>
                         </nav>
                     </aside>
                 </div>
